Add git command

--- a/hello.html
+++ b/hello.html
@@ -12,3 +12,16 @@
     hello, world!
 </body>
 </html>
+
+
+<!-- 
+git clone
+git add -fileName-
+git commit -am "---"
+git pull
+git push
+it status
+git log
+git reset --hard <hash>
+git reset --hard origin/master
+ -->
