Add git branch command

--- a/hello.html
+++ b/hello.html
@@ -24,4 +24,7 @@ it status
 git log
 git reset --hard <hash>
 git reset --hard origin/master
+git branch
+git checkout -b -name new branch-
+git checkout main
  -->
